src/styles.css
/* ... */
::selection {
    background-color: var(--hover);
}

h1 {
    margin-top: 0;
}

#calculator, h1 {
    background-color: var(--bkg);
    border: 1px solid var(--button);
    border-radius: 16px;
    padding: 8px;
}

footer {
  bottom: 0;
background-color: var(--bkg);
    border: 1px solid var(--button);
    left: 0;
  padding: 8px 0;
  position: fixed;
text-align: center;
  width: 100%;
}

/* Screen display */

#screen {
    margin-bottom: 8px;
}

#display, #result {
    align-content: center;
    height: 32px;
    padding: 0 8px;
    text-align: right;
}

#display {
    font-size: 20px;
}

#result {
    font-size: 24px;
    font-weight: bold;
}

/* Buttons */

button {
    background-color: var(--button);
    border: none;
    border-radius: 8px;
    font-family: inherit;
    font-size: inherit;
    height: 60px;
    width: 80px;
}

button:hover {
    background-color: var(--hover);
    cursor:pointer;
}

button#clear, button#undo {
    width: 50%;
}

button:disabled {
    background-color: var(--diasbled);
}

#buttons {
    display:flex;
    flex-direction: column;
    row-gap: 8px;
}

.row {
    column-gap: 8px;
    display: flex;
}

